[package]
name = "utf-rnn"
version = "0.1.0"
edition = "2021"

[dependencies]
candle-core = { git = "https://github.com/huggingface/candle.git", features = [
    "cuda",
] }
candle-nn = { git = "https://github.com/huggingface/candle.git", features = [
    "cuda",
] }
clap = { version = "4.5.19", features = ["derive"] } # Updated for clap v4
bincode = "1.3.3"
env_logger = "0.11.5"
indicatif = "0.17.3"
log = "0.4.17"
serde = { version = "1.0", features = ["derive"] }
tui = { version = "0.18.0", features = ["crossterm"] }
rand = "0.8.5"
anyhow = "1.0.90"
tokio = { version = "*", features = ["full"] }
